# ant

./: .env.example  .gitignore  .tmp_go_files.txt  .trivyignore  AGENT.md  AGENT.md.v1.bak  Makefile  ROADMAP.md  buf.gen.yaml  buf.yaml  codecov.yml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.reasonix/: REASONIX.md
backend/: .golangci.yml  Dockerfile  ant-vault  go.mod  go.sum  sqlc.yaml
docs/: AlfQ功能迁移计划.md  README.md  任务交接清单模板.md  对标开源项目调研-2026-05-25.md  技术债清单与治理状态.md  接口与数据流架构约定.md  文档索引与维护状态.md  新成员三日上手指南.md  量化系统架构缺陷分析-2026-05-25.md  金融架构改造-M11路线图-2026-05-25.md  金融架构评审-2026-05-25.md  项目全面评估-2026-05-24-v2.md  项目全面评估-2026-05-24.md  项目技术全景分析报告.md  项目文档与进度管理体系.md
docs.old/: README.md  新成员一站式导读.md
docs/进度/: 说明.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vitest.config.ts
grpc/: mt4.proto  mt5.proto
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
proto/: agent_gateway.proto  job.proto  market_regime.proto  mthub.proto  (+2 more)
research/: pyproject.toml  ruff.toml
research/ant_research/: __init__.py
research/ant_research/backtest/: __init__.py
research/ant_research/cli/: __init__.py
research/ant_research/client/: __init__.py
research/ant_research/data/: __init__.py
research/ant_research/factor/: __init__.py
research/ant_research/factor/dsl/: __init__.py  ast_.py  compile.py  lexer.py  ops.py  parser.py
research/ant_research/model/: __init__.py
research/tests/: test_alignment.py  test_factor_dsl.py
(+1157 files in other folders)
